Bug#39109 - Mysql Online Backup table doesn't show correct num_object count

Previously, the num_objects column in the backup_history table showed the number of
tables in the backup image. It now shows the number of objects with names (i.e,
tablespace, database, table, view, routine)